--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         Where Innovation Begins</p>
                 </div>
                 <div class="cont4">
-                    <a href="#"><div class="btn1">Contact Us</div></a>
+                    <a href="#"><div class="btn1">More</div></a>
                     <a href="#"><div class="btn2">Contact Us</div></a>
                 </div>
             </div>
@@ -49,9 +49,18 @@
             </div>
         </div>
         <div class="menuRight">
-            <img src="pic/amritSideINGray.png" alt="picture">
+            <img src="pic/black.png" alt="picture">
         </div>
     </div>
+
+    <div class="fade">
+        
+    </div>
+    <video id="background-video" width="320" height="240" autoplay muted loop>
+        <source src="pic/bgVideo.mp4" type="video/mp4">
+        <source src="movie.ogg" type="video/ogg">
+      Your browser does not support the video tag.
+    </video>
 
     
 </body>
