adding gallery page and photos

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         </div>
         <div class="right"> 
             <ul>
-                <a href="#"><li>Home</li></a>
+                <a href="index.html"><li>Home</li></a>
                 <a href="#"><li>About Me</li></a>
-                <a href="#"><li>Gallery</li></a>
-                <a href="#"><li>Resume</li></a>
+                <a href="Gallery.html"><li>Gallery</li></a>
+                <a href="https://codebyamrit.github.io/resume/light-theme.html"><li>Resume</li></a>
             </ul>
         </div>
     </div>
