adding scroll in y axis and image loading optimization

--- a/Gallery.html
+++ b/Gallery.html
@@ -6,7 +6,7 @@
     <title>LearnHTML | Gallery</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="scroll-behavior: smooth;">
     <div class="graphic">
         <img src="pic/bgGraphic.png" alt="">
     </div>
@@ -25,16 +25,16 @@
         </div>
     </div>
     <div class="wrapGallery">
-        <a href="gallery/1.jpg" target="_blank"><div class="galleryImg"><img src="gallery/1.jpg" alt="1"></div></a>
-        <a href="gallery/2.jpg" target="_blank"><div class="galleryImg"><img src="gallery/2.jpg" alt="2"></div></a>
-        <a href="gallery/3.jpg" target="_blank"><div class="galleryImg"><img src="gallery/3.jpg" alt="3"></div></a>
-        <a href="gallery/5.png" target="_blank"><div class="galleryImg"><img src="gallery/5.png" alt="5"></div></a>
-        <a href="gallery/6.jpg" target="_blank"><div class="galleryImg"><img src="gallery/6.jpg" alt="6"></div></a>
-        <a href="gallery/7.png" target="_blank"><div class="galleryImg"><img src="gallery/7.png" alt="7"></div></a>
-        <a href="gallery/8.jpg" target="_blank"><div class="galleryImg"><img src="gallery/8.jpg" alt="8"></div></a>
-        <a href="gallery/9.png" target="_blank"><div class="galleryImg"><img src="gallery/9.png" alt="9"></div></a>
-        <a href="gallery/10.png" target="_blank"><div class="galleryImg"><img src="gallery/10.png" alt="10"></div></a>
-        <a href="gallery/4.png" target="_blank"><div class="galleryImg"><img src="gallery/4.png" alt="4"></div></a>
+        <a href="gallery/1.jpg" target="_blank"><div class="galleryImg"><img src="gallery/1.jpg" alt="1" loading="lazy"></div></a>
+        <a href="gallery/2.jpg" target="_blank"><div class="galleryImg"><img src="gallery/2.jpg" alt="2"loading="lazy"></div></a>
+        <a href="gallery/3.jpg" target="_blank"><div class="galleryImg"><img src="gallery/3.jpg" alt="3"loading="lazy"></div></a>
+        <a href="gallery/5.png" target="_blank"><div class="galleryImg"><img src="gallery/5.png" alt="5"loading="lazy"></div></a>
+        <a href="gallery/6.jpg" target="_blank"><div class="galleryImg"><img src="gallery/6.jpg" alt="6"loading="lazy"></div></a>
+        <a href="gallery/7.png" target="_blank"><div class="galleryImg"><img src="gallery/7.png" alt="7"loading="lazy"></div></a>
+        <a href="gallery/8.jpg" target="_blank"><div class="galleryImg"><img src="gallery/8.jpg" alt="8"loading="lazy"></div></a>
+        <a href="gallery/9.png" target="_blank"><div class="galleryImg"><img src="gallery/9.png" alt="9"loading="lazy"></div></a>
+        <a href="gallery/10.png" target="_blank"><div class="galleryImg"><img src="gallery/10.png" alt="10"loading="lazy"></div></a>
+        <a href="gallery/4.png" target="_blank"><div class="galleryImg"><img src="gallery/4.png" alt="4"loading="lazy"></div></a>
     </div>
 </body>
 </html>
