for cache change adding version for js css

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
     <title>Amrit Sharma | Full Stack Developer | CodeByAmrit</title>
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/custom.css">
+    <link rel="stylesheet" href="./css/style.css?v=2.0">
+    <link rel="stylesheet" href="./css/custom.css?v=2.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <!-- Schema.org Structured Data -->
     <script src="./js/nonce-generator.js" defer></script>
@@ -390,7 +390,7 @@
                 scroll-behavior: smooth;
             }
         </style>
-        <script src="js/script.js"></script>
+        <script src="js/script.js?v=2.0"></script>
 </body>
 
 </html>
