--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,7 @@
                 </div>
             </div>
 
-            
+            <instagram-post></instagram-post>
 
 
 
@@ -62,6 +62,8 @@
             }
         </style>
         <!-- <script src="js/script.js"></script> -->
+        <instagram-post post-url="https://www.instagram.com/p/C3Sk6d2MTjI/" captions="true"></instagram-post>
+
 </body>
 
 </html>
