--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 
 </head>
 
-<body class="dark:bg-gray-900 h-auto overflow-x-hidden">
-    <video autoplay muted loop id="bgVideo1" style="height: 96vh; width: 100vw;" class="absolute top-0 inset-0 h-full object-cover -z-22200">
+<body class="dark:bg-gray-900 h-auto overflow-x-hidden p-4">
+    <video autoplay muted loop id="bgVideo1" style="height: 96vh; width: 100vw;" class="blur-3xl absolute top-0 inset-0 h-full object-cover -z-22200">
         <source src="./images/bg.mp4" type="video/mp4" class="transform-gpu">
         Your browser does not support the video tag.
     </video>
     <div class=" border-gray-200 dark:bg-gray-900 lg:mx-20">
 
-        <nav class="bg-white border-gray-200 dark:bg-gray-900 pt-4"
+        <nav class="bg-white border-gray-200 dark:bg-gray-900 "
             style="background-color: rgb(255, 255, 255) !important;">
             <div class="flex flex-wrap items-center justify-between max-w-screen-xl mx-auto p-4 dark:bg-gray-900"
                 style="z-index: 1000;">
