--- a/2.html
+++ b/2.html
@@ -96,11 +96,34 @@
                 class="absolute h-100 -z-10 w-100 bg-[#1f1436] blur-3xl rounded-full bottom-20 scale-125 left-1/2 transform -translate-x-1/2">
             </div>
             <!-- <div id="quote-container" class=" absolute right-0 top-70 rotate-90 flex"></div> -->
-            <div id="quote-container-english" class="absolute right-0 top-70 rotate-90 z-40  flex"></div>
+            <div id="quote-container-english" class="absolute -right-10 top-70 rotate-90 z-40  flex">Technology grows with logic.</div>
         </div>
 
 
         <img src="/images/amrit.png" alt="wings" class="z-10  h-screen  absolute bottom-0">
+
+        <div class="absolute flex flex-col bottom-8 max-w-80 text-justify left-15 h-fit w-100 gap-2">
+            <h2 class="text-xl tracking-widest text-gray-100">🚀 Passionate Web Developer</h2>
+            <p class="text-wrap text-xs font-normal text-gray-300 text-justify">
+                Building fast, responsive, and scalable web applications with modern technologies.
+                Transforming ideas into user-friendly digital experiences with clean code and creative solutions.
+            </p>
+        </div>
+
+        <div class="absolute right-15 bottom-8 flex flex-col max-w-75">
+            <span class="flex gap-2 mb-2">
+                <img src="./images/medal-.png" alt="Medal" width="20px" height="20px" class="invert w-8 h-8 ">
+                <p class="text-xs">Featured Projects | Innovative Solutions Built with Modern Web Technologies</p>
+            </span>
+            <a href="https://github.com/CodeByAmrit/" class="right-15 bottom-8 flex -space-x-4 rtl:space-x-reverse">
+            <img class="w-14 h-14 border-2 border-[#bccdff] rounded-full dark:border-gray-800" src="./images/file_manager_2025.png" alt="">
+            <img class="w-14 h-14 border-2 border-[#bccdff] rounded-full dark:border-gray-800" src="./images/BajrangVidyaMandir.png" alt="">
+            <img class="w-14 h-14 border-2 border-[#bccdff] rounded-full dark:border-gray-800" src="./images/mom.png" alt="">
+            <img class="w-14 h-14 border-2 border-[#bccdff] rounded-full dark:border-gray-800" src="./images/globalwings.png" alt="">
+            <img class="w-14 h-14 border-2 border-[#bccdff] rounded-full dark:border-gray-800" src="./images/gramofly.png" alt="">
+            <img class="w-14 h-14 border-2 border-[#bccdff] rounded-full dark:border-gray-800" src="https://raw.githubusercontent.com/CodeByAmrit/school/refs/heads/master/public/favicon.png" alt="student-tracker-banner">
+        </a>
+        </div>
 
         <div class="w-full  mt-10 bg-opacity-0">
 
@@ -170,7 +193,7 @@
         <div class="border-1 scale-75 rounded-lg flex justify-center items-center p-4 min-w-fit border-[#421c94]">AI &
             Automation</div>
     </div>
-    <script src="./js/2.js"></script>
+    <!-- <script src="./js/2.js"></script> -->
 </body>
 
 </html>
